@@ -1,12 +1,10 @@
 <div class="container pt-5">
     <div class="row">
-        <form #postForm="ngForm" (ngSubmit)="addProduct(postForm.value)">
+        <form #postForm="ngForm" (ngSubmit)="addLibrary(postForm.value)">
             <div class="col-3">
                 <div><span>img</span><input type="text" ngModel name="img"></div>
                 <div><span>name</span><input type="text" ngModel name="name"></div>
-                <div><span>description</span><input type="text" ngModel name="description"></div>
-                <div><span>color</span><input type="text" ngModel name="libcolor"></div>
-                <div><span>label</span><input type="text" ngModel name="btext"></div>
+                <div><span>time</span><input type="text" ngModel name="time"></div>
                 <div><button type="submit">submit</button></div>
             </div>
         </form>
